[package]
name = "auction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1", features = ["derive"] }
measure = { path = "../measure" }
engine = { path = "../engine" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.4"

[dependencies.simple_logger]
version = "2.1"
default-features = false
features = ["timestamps", "colors"]
