[package]
name = "engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
match-base = { path = "../match-base" }
measure = { path = "../measure" }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
rand = "0.4"
zstd = "0.11"

[dependencies.simple_logger]
version = "2.1"
default-features = false
features = ["timestamps", "colors"]
