[package]
name = "match-base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
tcmalloc = "0.3"

[dev-dependencies]
bencher = "0.1"
measure = { path = "../measure" }
rand = "0.4"

[[bench]]
name = "order"
harness = false
